--- a/client/src/assets/custom.scss
+++ b/client/src/assets/custom.scss
@@ -1,3 +1,26 @@
 body {
     background: #3d3d3d;
 }
+.danger {
+    color: indianred;
+  }
+
+.formContent {
+    margin-top: 5rem;
+    padding-bottom: 3rem;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    border-radius: 10px 10px 10px 10px;
+    background: #fff;
+    padding: 30px;
+    width: 90%;
+    max-width: 450px;
+    position: relative;
+    padding: 0px;
+    -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.9);
+    box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.9);
+    text-align: center;
+}
+
+#icon {
+    width: 64px;
+  }
